--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 
-/.next
-/certificates
-/coverage
-/dist
-/node_modules
 .DS_Store
-.idea
-.vscode
+*.pem
+.env*
+*.tsbuildinfo
+next-env.d.ts
+/.local
+/certificates
+/node_modules
+/.pnp
+.pnp.*
+/coverage
+/.next/
+/out/
+/build
+npm-debug.log*
+.pnpm-debug.log*
