--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pixelated-template",
-	"version": "0.1.5",
+	"version": "0.1.6",
 	"private": false,
 	"description": "Pixelated starter template for Next.js, Typescript, and common configs",
 	"scripts": {
@@ -13,22 +13,23 @@
 		"setup": "node scripts/setup.js"
 	},
 	"dependencies": {
-		"@pixelated-tech/components": "^3.2.8",
+		"@pixelated-tech/components": "^3.3.0",
+		"html-entities": "^2.6.0",
 		"md5": "^2.3.0",
-		"next": "^16.0.10",
+		"next": "^16.1.0",
 		"prop-types": "^15.8.1",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
-		"sass": "^1.96.0"
+		"sass": "^1.97.1"
 	},
 	"devDependencies": {
 		"@types/md5": "^2.3.6",
-		"@types/node": "^25.0.2",
+		"@types/node": "^25.0.3",
 		"@types/prop-types": "^15.7.15",
 		"@types/react": "^19.2.1",
 		"@types/react-dom": "^19.0.6",
 		"eslint": "^9.39.2",
-		"eslint-config-next": "^16.0.10",
+		"eslint-config-next": "^16.1.0",
 		"eslint-import-resolver-typescript": "^4.4.4",
 		"typescript": "^5.0.0"
 	},
