--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "pixelated-template",
-	"version": "0.1.12",
+	"version": "0.1.13",
 	"private": false,
 	"description": "Pixelated starter template for Next.js, Typescript, and common configs",
 	"scripts": {
 		"dev": "npm run clean && NODE_OPTIONS='--inspect' next dev  -p 3008 --experimental-https",
 		"build": "npm run clean && NODE_ENV=production next build",
 		"start": "npm run clean && next build && next start",
-		"generate-site-images": "node scripts/generate-site-images.js",
+		"generate-site-images": "node ./node_modules/@pixelated-tech/components/dist/scripts/generate-site-images.js",
 		"lint": "eslint --fix",
 		"clean": "rm -rf .next && rm -rf out",
 		"config:vault": "npx tsx ./node_modules/@pixelated-tech/components/dist/scripts/config-vault.ts",
@@ -16,23 +16,23 @@
 		"release": "./node_modules/@pixelated-tech/components/dist/scripts/release.sh"
 	},
 	"dependencies": {
-		"@pixelated-tech/components": "^3.9.16",
+		"@pixelated-tech/components": "^3.11.9",
 		"html-entities": "^2.6.0",
 		"md5": "^2.3.0",
-		"next": "^16.1.3",
+		"next": "^16.1.6",
 		"prop-types": "^15.8.1",
-		"react": "^19.2.3",
-		"react-dom": "^19.2.3",
-		"sass": "^1.97.2"
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4",
+		"sass": "^1.97.3"
 	},
 	"devDependencies": {
 		"@types/md5": "^2.3.6",
-		"@types/node": "^25.0.9",
+		"@types/node": "^25.0.10",
 		"@types/prop-types": "^15.7.15",
-		"@types/react": "^19.2.8",
+		"@types/react": "^19.2.10",
 		"@types/react-dom": "^19.0.6",
 		"eslint": "^9.39.2",
-		"eslint-config-next": "^16.1.3",
+		"eslint-config-next": "^16.1.6",
 		"eslint-import-resolver-typescript": "^4.4.4",
 		"typescript": "^5.0.0"
 	},
